simple website task

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             </div>
             <div class="con_right">
                <div class="image">
-                <img src="Images/c1.avif" alt="">
+                <img src="Images/c6.webp" alt="">
                </div>
             </div>
         </div>
