--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
                                 <i class="fas fa-user-tie"></i>
                                 <h4>300+</h4>
                             </div>
+                            lore
                             <div class="ab_box">
                                 <h3>Our Employe</h3>
                                 <i class="fas fa-user"></i>
