--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,20 @@
                 </form>
             </div>
             <div class="con_right">
-               <div class="image">
-                <img src="Images/c6.webp" alt="">
-               </div>
+                <div class="sub_cont">
+                    <div class="per_link">
+                        <i class="fab fa-facebook"></i>
+                        <a href="https://wwww.facebook.com/adil.afridi.355744">www.facebook.com/adiljamalfridi</a>
+                    </div>
+                    <div class="per_link">
+                        <i class="fas fa-phone"></i>
+                        <a href="tel:+9233346445097">0333-4645-097</a>
+                    </div>
+                    <div class="per_link">
+                        <i class="fab fa-whatsapp"></i>
+                        <a href="https://wa.me/?text=i come here from your website">0333-4645-097</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
