simple website task

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 </form>
             </div>
             <div class="con_right">
-                <div class="sub_cont">
+                <div class="right_sub_cont">
                     <div class="per_link">
                         <i class="fab fa-facebook"></i>
                         <a href="https://wwww.facebook.com/adil.afridi.355744">www.facebook.com/adiljamalfridi</a>
