--- a/contact.html
+++ b/contact.html
@@ -61,11 +61,11 @@
                     </div>
                     <div class="per_link">
                         <i class="fas fa-phone"></i>
-                        <a href="tel:+9233346445097">0333-4645-097</a>
+                        <a href="tel:+9233346445097">+92333-4645-097</a>
                     </div>
                     <div class="per_link">
                         <i class="fab fa-whatsapp"></i>
-                        <a href="https://wa.me/?text=i come here from your website">0333-4645-097</a>
+                        <a href="https://wa.me/?text=i come here from your website">+92333-4645-097</a>
                     </div>
                 </div>
             </div>
