--- a/contact.html
+++ b/contact.html
@@ -60,11 +60,11 @@
                         <a href="https://wwww.facebook.com/adil.afridi.355744">www.facebook.com/adiljamalfridi</a>
                     </div>
                     <div class="per_link">
-                        <i class="fas fa-phone"></i>
+                        <i class="fas fa-phone ph"></i>
                         <a href="tel:+9233346445097">+92333-4645-097</a>
                     </div>
                     <div class="per_link">
-                        <i class="fab fa-whatsapp"></i>
+                        <i class="fab fa-whatsapp wtp"></i>
                         <a href="https://wa.me/?text=i come here from your website">+92333-4645-097</a>
                     </div>
                 </div>
