simple website task

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
             <div class="per_product">
                 <img src="Images/product-7.jpg" alt="">
-                <h4>T-Shirt</h4>
+                <h4>Sock</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
