--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  </head>
 <body>
     
-    <div class="header" id="header">
+    <div class="header">
         
         <div class="container">
-            <div class="navbar">
+            <div class="navbar" id="header">
                 <div class="logo">
                     <img src="Images/logo.png" width="125px">
                 </div>
