Adding in the last

--- a/about.html
+++ b/about.html
@@ -41,15 +41,16 @@
                         </div>
                     </div>
                     <div class="ab_right">
-                        <h1>Our Working What We do!</h1>
+                        <h1>What We do!</h1>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas quam alias enim corporis at. 
-                            Facilis labore ea odio officia 
-                            repellendus sit corrupti minus quos praesentium, quisquam maxime odit iste veritatis!
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas quam alias enim corporis at. 
-                            Facilis labore ea odio officia 
-                            repellendus sit corrupti minus quos praesentium, quisquam maxime odit iste veritatis!
-                        </p>
+                            "At Redstore, we're more than just an e-commerce destination; we're your go-to source for a world of shopping possibilities. Our journey began with a simple vision: to revolutionize your online shopping experience.
+
+                            We take pride in offering a handpicked selection of products that blend quality, style, and affordability. From the latest trends to timeless classics, Redstore caters to your diverse needs and preferences.
+
+                            Our team is passionate about providing you with top-notch service. We're committed to ensuring your satisfaction with secure transactions, lightning-fast delivery, and a user-friendly interface.
+
+                            Trust and customer happiness are our driving forces. Redstore is your trusted shopping companion on a journey of endless possibilities. Join us in discovering the Redstore difference in the world of e-commerce. Thank you for being part of our community.
+                         </p>
                         <div class="ab_footer">
                             <div class="ab_box">
                                 <h3>Our Manager</h3>
