--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,16 @@
                 </form>
             </div>
             <div class="con_right">
+                <div class="cont_content">
+                    <h3>Get in Touch with Redstore</h3>
+                    <p>
+                        "Redstore values your feedback and inquiries. We're always here to assist you. Whether you have questions about our products, need assistance with an order, or simply want to say hello, our dedicated customer support team is just a click or call away. Your satisfaction is our top priority, and we're committed to providing you with excellent service.
+
+                            Feel free to reach out through our contact form, or get in touch with us directly via phone or email. We're available to assist you with any aspect of your shopping experience. Your trust and confidence in Redstore mean the world to us, and we're eager to hear from you.
+
+                            Thank you for choosing Redstore, and we look forward to serving you with the best shopping experience and support possible."
+                  </p>
+                </div>
                 <div class="right_sub_cont">
                     <div class="per_link">
                         <i class="fab fa-facebook"></i>
