--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <div class="sub_cont">
                     <div class="ab_left">
                         <div class="ab_image">
-                            <img src="Images/ab3.webp" alt="">
+                            <img src="Images/ab.png" alt="">
                         </div>
                     </div>
                     <div class="ab_right">
